<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share_app"
            android:title="@string/share" />

        <item
            android:id="@+id/nav_check_usb"
            android:icon="@drawable/ic_menu_check_usb"
            android:title="@string/checkUsb" />


        <item
            android:id="@+id/nav_picture_sync"
            android:icon="@drawable/ic_menu_picture_sync"
            android:title="@string/sync_picture" />



        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/feedback" />



        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/exit" />


    </group>


</menu>
