<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingTop="20dp"
    android:gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipinputFilename"
        android:gravity="center"
        android:textSize="18sp"
        android:paddingBottom="20dp"
         />

    <EditText
        android:layout_width="350dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:background="@null"
        android:layout_height="wrap_content"
        android:id="@+id/rename_dialog_ed"/>
    <LinearLayout android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/strokebg"
        android:layout_height="wrap_content">

    <TextView android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/strokebg"
        android:id="@+id/renamedialog_canbtn"
        android:text="@string/cancel"/>


        <TextView android:text="@string/sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/renameDialog_okbtn"
            android:background="@drawable/strokebg"

            />
        </LinearLayout>
</LinearLayout>