<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="180dp"
    android:minWidth="280dp"
    android:orientation="vertical">


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="end"
        android:text="@string/default_path"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/choose_dialog_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/external_path"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <com.gc.materialdesign.views.CheckBox
            android:id="@+id/choose_dialog_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/choose_dialog_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/internal_path"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="16sp" />


        <com.gc.materialdesign.views.CheckBox
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:id="@+id/choose_dialog_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/cancle_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancle"
        android:textSize="18sp" />


</LinearLayout>