<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/feedback_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <EditText
        android:padding="10dp"
        android:gravity="start|clip_horizontal"
        android:id="@+id/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:background="@drawable/feedback_edittext"
        android:hint="@string/feedback_hint"
        android:layout_weight="0.35" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/tip_input_email_ad"
        android:id="@+id/feedback_email_edittext"
        android:singleLine="true"
        />


    <Button
        android:id="@+id/feedback_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="commit"
        android:text="@string/submit_feed"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:background="@drawable/submitfbbtn"

        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        />

</LinearLayout>